[package]
name = "day_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0.15" }
env_logger = { version = "0.10" }
itertools = { version = "0.12" }
lazy_static = { version = "1.4" }
log = { version = "0.4", features = ["std", "serde"] }
rayon = { version = "1.8" }
regex = { version = "1.10" }
