[package]
name = "day_9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
dotenv = { version = "0.15" }
env_logger = { version = "0.10" }
itertools = { version = "0.12" }
lazy_static = { version = "1.4" }
log = { version = "0.4", features = ["std", "serde"] }
nom = { version = "7.1" }
num-integer = { version = "0.1" }
rayon = { version = "1.8" }
regex = { version = "1.10" }
test-log = { version = "0.2.14", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
